Tweak a few things to deal with SSL and the end of Twitter.

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -4,24 +4,24 @@
 	<title>[[@title]] - The Record</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name=viewport content=width=device-width />
-	<link rel=stylesheet type=text/css href=http://therecord.co/styles/styleSheet.css />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://therecord.co/xml/rss.xml" />
+	<link rel=stylesheet type=text/css href=/styles/styleSheet.css />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="https://therecord.co/xml/rss.xml" />
 </head>
 <body>
 
 <div id="pagebox">
 
-<div id="leftsidebar"><a href="http://therecord.co/"><img src="http://therecord.co/images/therecord-small.png" height="280" width="295" alt="The Record" /></a>
+<div id="leftsidebar"><a href="/"><img src="/images/therecord-small.png" height="280" width="295" alt="The Record" /></a>
 
 <p>The Record brings you the stories you should know about the Mac and Cocoa development community.</p>
 
-<p>We’re currently publishing season #1: <a href="http://therecord.co/season1">Seattle Before the iPhone</a>.</p>
+<p>We’re currently publishing season #1: <a href="/season1.html">Seattle Before the iPhone</a>.</p>
 
-<p><b><a href="https://itunes.apple.com/us/podcast/the-record/id791861057">Subscribe in iTunes</a>.</b> Or to the <a href="http://therecord.co/xml/rss.xml">podcast feed</a>.</p>
+<p><b><a href="https://itunes.apple.com/us/podcast/the-record/id791861057">Subscribe in iTunes</a>.</b> Or to the <a href="https://therecord.co/xml/rss.xml">podcast feed</a>.</p>
 
 <p>Hosted by<br />
-<span class="hosted"><a href="https://twitter.com/twenty3/">Chris Parrish</a> &<br />
-<a href="http://inessential.com/">Brent Simmons</a></span></p>
+<span class="hosted"><a href="https://mastodon.social/@twenty3">Chris Parrish</a> &<br />
+<a href="https://inessential.com/">Brent Simmons</a></span></p>
 
 <p>© Copyright 2014-2016 Brent Simmons and Chris Parrish.</p>
 </div>
